added first() method to slurper